# simple-devops

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  DEPLOY.md  DOCKER_COMPOSE_COMPARISON.md  FRONTEND_API_ISSUE.md  GIT_UPLOAD_GUIDE.md  LOCAL_DEPLOY.md  Makefile  N8N_FEEDBACK_FEATURE.md  PROJECT_GUIDE.md  README.md  SEARCH_SORT_EXPLANATION.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend-fastapi/: CODE_REVIEW.md  DOCS_INDEX.md  Dockerfile  QUICKSTART.md  README.md  ROUTING_GUIDE.md  TROUBLESHOOTING.md  UV_MIGRATION_GUIDE.md  pyproject.toml  requirements.txt  seed_db.py  start.sh  单阶段 vs 多阶段 Dockerfile 对比.md
backend-fastapi/app/: __init__.py  main.py  models.py  n8ntest.py  routes.py
backend-fastapi/tests/: test_health.py
docs/: DEPLOYMENT.md  DOCS_OPTIMIZATION_SUMMARY.md  DOCUMENTATION_STRUCTURE.md  FILE_ORGANIZATION.md  GIT_BRANCH_OPERATIONS.md  MAKEFILE_GUIDE.md  MAKEFILE_LEARNING_GUIDE.md  MULTI_PLATFORM_BUILD.md  PYTHON_VERSION_CLARIFICATION.md  README.md  day1.md  day2.md  day3.md  day4.md  day7.md  day8.md  n8n-workflow.json  week1.md  week2.md
frontend-react/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
k8s/: backend.yaml  frontend.yaml  kind-config.yaml  postgres.yaml
terraform/: .gitignore  AWS_ARCHITECTURE.md  AWS_DEPLOYMENT_DESIGN.md  AWS_DEPLOYMENT_GUIDE.md  CONFIGURATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FILE_STRUCTURE_EXPLAINED.md  GHCR_TO_ECS_GUIDE.md  HOW_TO_BUILD_TERRAFORM.md  QUICKSTART.md  QUICK_START.md  README.md  STEP_BY_STEP_GUIDE.md  alb.tf  ecr-sync.tf  (+11 more)
(+40 files in other folders)
