[project]
name = "backend-fastapi"
version = "0.1.0"
description = "FastAPI backend for simple blog"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.5",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "pydantic==2.9.2",
    "pytest==8.3.3",
    "httpx==0.27.2",
    "requests==2.31.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

